@@ -1,3 +1,7 @@
+=== SVN
+
+* Enhanced Database.connect to accept options with string keys, so it can now accept options loaded from YAML files. Database.connect also automatically converts :username option into :user for compatibility with existing YAML configuration files for AR and DataMapper.
+
 === 1.0.0.1 (2008-01-03)
 
 * Changed MySQL adapter to support specifying socket option.
